[gd_scene load_steps=7 format=3 uid="uid://baf2w7kcqs61m"]

[ext_resource type="Texture2D" uid="uid://dstvedbjrgb0s" path="res://Art/Boxes/PlanterBox.svg" id="1_k3dd0"]
[ext_resource type="Script" path="res://Scripts/InGame/PlanterBox.gd" id="2_bw4qh"]
[ext_resource type="Texture2D" uid="uid://b0128crkkj0kr" path="res://Art/UI/LoadIcon.svg" id="3_0jfjm"]
[ext_resource type="PackedScene" uid="uid://bma13yufnmijt" path="res://Prefabs/InGame/ActionHint.tscn" id="5_ldncg"]
[ext_resource type="Texture2D" uid="uid://dyu6v3bvdaaut" path="res://Art/Particles/DirtParticle.svg" id="5_pjpv2"]
[ext_resource type="AudioStream" uid="uid://epjfiokqud22" path="res://Audio/SFX/Click_Standard_00.mp3" id="6_a8kvg"]

[node name="PlanterBox" type="Sprite2D"]
texture = ExtResource("1_k3dd0")
offset = Vector2(0, 10)
script = ExtResource("2_bw4qh")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -42.0
offset_top = -160.0
offset_right = 15.0
offset_bottom = -103.0
scale = Vector2(1.5, 1.5)
step = 0.01
value = 100.0
fill_mode = 4
texture_under = ExtResource("3_0jfjm")
texture_progress = ExtResource("3_0jfjm")
tint_under = Color(0.145098, 0.145098, 0.145098, 1)
tint_over = Color(0.509804, 0.509804, 0.509804, 1)

[node name="ActionHint" parent="." instance=ExtResource("5_ldncg")]
visible = false
position = Vector2(-30, -139)
scale = Vector2(1.5, 1.5)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 11)
emitting = false
amount = 16
lifetime = 0.2
one_shot = true
explosiveness = 1.0
texture = ExtResource("5_pjpv2")
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
initial_velocity_min = 80.0
initial_velocity_max = 80.0
scale_amount_min = 0.2

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(160, 180)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -153.0
offset_right = 16.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_a8kvg")
volume_db = -10.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="focus_entered" from="Button" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_button_focus_exited"]
